# coursera1

mycmake/p1/p1_app/: CMakeLists.txt  tutorial.cxx
mycmake/p2/p2_app/: CMakeLists.txt
mycmake/p3/p3_app/: CMakeLists.txt  coverage.cpp
mycmake/p4/p4_app/: CMakeLists.txt  main.cpp  person.proto
myproto/p5/p5_parent/: CMakeLists.txt  main.cpp
myproto/p5/p5_parent/car_lib/: CMakeLists.txt
myproto/p5/p5_parent/p5_app/: CMakeLists.txt  main.cpp
myproto/p5/p5_parent/person_lib/: CMakeLists.txt
myproto/p6/cov_files/myout/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
myproto/p6/cov_files/myout/_1/car_lib/: car.pb.cc.func-sort-c.html  car.pb.cc.func.html  car.pb.cc.gcov.html  car.pb.h.func-sort-c.html  car.pb.h.func.html  car.pb.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
myproto/p6/cov_files/myout/_1/person_lib/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  person.pb.cc.func-sort-c.html  person.pb.cc.func.html  person.pb.cc.gcov.html  person.pb.h.func-sort-c.html  person.pb.h.func.html  person.pb.h.gcov.html
myproto/p6/cov_files/myout/parent/app/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
myproto/p6/cov_files/myout/usr/include/c++/4.6/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  ostream.func-sort-c.html  ostream.func.html  ostream.gcov.html
myproto/p6/cov_files/myout/usr/include/google/protobuf/: descriptor.h.func-sort-c.html  descriptor.h.func.html  descriptor.h.gcov.html  descriptor.pb.h.func-sort-c.html  descriptor.pb.h.func.html  descriptor.pb.h.gcov.html  extension_set.h.func-sort-c.html  extension_set.h.func.html  extension_set.h.gcov.html  generated_message_reflection.h.func-sort-c.html  generated_message_reflection.h.func.html  generated_message_reflection.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  message.h.func-sort-c.html  message.h.func.html  message.h.gcov.html  message_lite.h.func-sort-c.html  message_lite.h.func.html  message_lite.h.gcov.html  unknown_field_set.h.func-sort-c.html  unknown_field_set.h.func.html  unknown_field_set.h.gcov.html  wire_format.h.func-sort-c.html  wire_format.h.func.html  wire_format.h.gcov.html  wire_format_lite.h.func-sort-c.html  wire_format_lite.h.func.html  wire_format_lite.h.gcov.html  wire_format_lite_inl.h.func-sort-c.html  wire_format_lite_inl.h.func.html  (+1 more)
myproto/p6/parent/: CMakeLists.txt
myproto/p6/parent/app/: CMakeLists.txt
myproto/p6/parent/car_lib/: CMakeLists.txt  car.proto
(+65 files in other folders)
